[workspace]
members = [
    "tachyonfx-ftl-core",
    "tachyonfx-ftl-cli",
    "tachyonfx-ftl-web",
]

resolver = "2"

[workspace.dependencies]
ratatui = { version = "0.29.0", default-features = false }
# tachyonfx = { version = "0.19.0", default-features = false, features = ["std"] }
tachyonfx = { git = "https://github.com/junkdog/tachyonfx", branch = "development", default-features = false, features = ["std"] }
#tachyonfx = { path = "../tachyonfx", default-features = false, features = ["std"] }
ansi-to-tui = "7.0.0"
wasm-bindgen = "0.2.103"
bitflags = "2.9.0"
web-time = "1.1.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
console_error_panic_hook = "0.1"
eyre = "0.6.12"
web-sys = "0.3.80"
serde = "1.0"
serde_json = "1.0"
