[package]
name = "tfxed-cli"
version = "0.1.0"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
license = "MIT"
edition = "2021"
description = "CLI terminal interface for tachyonfx effect DSL editor"

[dependencies]
tfxed-core = { path = "../tachyonfx-ftl-core" }
ratatui = { workspace = true, features = ["crossterm"] }
crossterm = { workspace = true }
color-eyre = { workspace = true }
tachyonfx = { workspace = true, default-features = false, features = ["dsl", "crossterm"] }
ansi-to-tui = { workspace = true }

[[bin]]
name = "tfxed"
path = "src/main.rs"
