[package]
name = "tfxed-core"
version = "0.1.0"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
license = "MIT"
edition = "2021"
description = "Core library for tachyonfx effect DSL editor"

[dependencies]
ratatui = { workspace = true, default-features = false }
bitflags = { workspace = true }
tachyonfx = { workspace = true, default-features = false, features = ["dsl"] }
ansi-to-tui = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }

[features]
web-backend = ["web-time", "wasm-bindgen"]
