[package]
name = "tachyonfx-ftl-web"
version = "0.1.0"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
license = "MIT"
edition = "2021"
description = "Web interface for tachyonfx effect DSL editor"

[dependencies]
tfxed-core = { path = "../tachyonfx-ftl-core", features = ["web-backend"] }
ratatui = { workspace = true, default-features = false }
ratzilla = { git = "https://github.com/junkdog/ratzilla", branch = "beamterm-update" }
console_error_panic_hook = { workspace = true }
eyre = { workspace = true }
tachyonfx = { workspace = true, default-features = false, features = ["dsl", "web-time"] }
web-sys = { workspace = true, features = ["Location", "Window", "console"] }
wasm-bindgen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[[bin]]
name = "tachyonfx-ftl-web"
path = "src/main.rs"
