[package]
name = "tachyonfx-ftl-web"
version = "0.1.0"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
license = "MIT"
edition = "2021"
description = "Web interface for tachyonfx effect DSL editor"

[dependencies]
tfxed-core = { path = "../tachyonfx-ftl-core", features = ["web-backend"] }
ratatui = { workspace = true }
ratzilla = { git = "https://github.com/junkdog/ratzilla", branch = "beamterm-latest" }
# ratzilla = { path = "../../ratzilla" }
console_error_panic_hook = { workspace = true }
eyre = { workspace = true }
tachyonfx = { workspace = true, features = ["dsl", "wasm"] }
web-sys = { workspace = true, features = ["Location", "Window", "console"] }
wasm-bindgen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
flate2 = "1.0"
base64 = "0.22"
indoc = "2.0.6"
serde-wasm-bindgen = "0.6.5"

[[bin]]
name = "tachyonfx-ftl-web"
path = "src/main.rs"
